Fixed topbar spacing and cross browser

--- a/scss/base/_elements.scss
+++ b/scss/base/_elements.scss
@@ -91,6 +91,7 @@
   }
 .flex-container {
 	display:flex;
+	display: -webkit-flex;
 	-webkit-align-items: center;
 	-moz-align-items: center;
 	-ms-align-items: center;
@@ -98,6 +99,7 @@
 
 	&.flex-col {
 		flex-direction: column;
+		-webkit-flex-direction: column;
 	}
 }
   // CSS Global Color Selectors
