--- a/scss/modules/_topbar.scss
+++ b/scss/modules/_topbar.scss
@@ -65,6 +65,7 @@
 			border-width: 2px;
 			border-style: solid;
 			border-color: rgba(255,255,255,0);
+			
 			&:hover{
 				@include border-radius(0.5rem);
 				//background-color: $white;
@@ -85,5 +86,12 @@
 				border-color: $topbar-link-border-color;
 			}
 		}
+	}
+}
+// Fix for wide nav menu causing the nav to collide with the logo.
+.top-bar-section li:not(.has-form) a:not(.button) {
+	@media (max-width: 720px) {
+		padding-left:0.5rem;
+		padding-right:0.5rem;
 	}
 }
